--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 [mongo]
 #host=localhost
-#port=
+#port=27017
 #username=None
 #password=None
 database=test_db
@@ -11,7 +11,8 @@ collection=documents
 
 [mq]
 #host=localhost
-#port=
+#port=5672
+#vhost=/
 #username=None
 #password=None
 queue=test_queue
