Configurable wkhtmltopdf and pandoc

--- a/config.cfg
+++ b/config.cfg
@@ -18,4 +18,12 @@ collection=documents
 queue=test_queue
 
 [logging]
-level=INFO
+level=DEBUG
+
+#[pandoc]
+#executable=pandoc
+#args=--standalone
+
+#[wkhtmltopdf]
+#executable=wkhtmltopdf
+#args=
