Configurable timeout for subprocesses

--- a/config.cfg
+++ b/config.cfg
@@ -23,7 +23,9 @@ level=DEBUG
 #[pandoc]
 #executable=pandoc
 #args=--standalone
+#timeout=None
 
 #[wkhtmltopdf]
 #executable=wkhtmltopdf
 #args=
+#timeout=None
