--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Click==7.0
-Jinja2==2.11.1
-markdown2==2.3.8
+click==7.1.2
+Jinja2==2.11.2
+markdown2==2.3.9
 MarkupSafe==1.1.1
 pika==1.1.0
 pymongo==3.10.1
+PyYAML==5.3.1
 six==1.14.0
-tenacity==6.0.0
+tenacity==6.2.0
