[DSW-822] Use human-friendly document filenames

--- a/config.yml
+++ b/config.yml
@@ -22,6 +22,10 @@ mq:
 logging:
   level: INFO
 
+documents:
+  naming:
+    strategy: sanitize # uuid|slugify|sanitize
+
 externals:
   pandoc:
     executable: pandoc
