--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ rdflib-jsonld==0.5.0
 six==1.14.0
 tenacity==6.2.0
 text-unidecode==1.3
+git+https://github.com/UoA-eResearch/pandoc-docx-pagebreak-py.git
