--- a/config.yml
+++ b/config.yml
@@ -1,28 +1,19 @@
-mongo:
-#  host: localhost
-#  port: 27017
-  database: engine-wizard
-#  collection: documents
-#  fs_collection: documentFs
-#  templates_collection: templates
-#  assets_fs_collection: templateAssetFs
-#  auth:
-#    username:
-#    password:
-#    database: (database)
-#    mechanism: SCRAM-SHA-256
+database:
+  connectionString: postgresql://postgres:postgres@postgres:5432/engine-wizard
+  stripeSize: 1 # used by SE only
+  connectionTimeout: 30000
+  maxConnections: 10 # used by SE only
+  queueTimeout: 500 # used by DW only
 
-#mq:
-#  host: localhost
-#  port: 5672
-#  vhost: /
-#  queue: document.generation
-#  auth:
-#    username:
-#    password:
+s3:
+  url: http://minio:9000
+  username: minio
+  password: minio
+  bucket: engine-wizard
 
 logging:
   level: INFO
+  globalLevel: WARNING
 
 #documents:
 #  naming:
