[DSW-1156] Fix markdown in document templates

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 click==7.1.2
 isodate==0.6.0
 Jinja2==2.11.3
-markdown2==2.4.0
+Markdown==3.3.4
 MarkupSafe==1.1.1
+mdx-breakless-lists==1.0.1
 panflute==2.0.5
 pathvalidate==2.4.1
 pika==1.2.0
