--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.0.3
 colorama==0.4.4
+idna==3.3
 isodate==0.6.0
 Jinja2==3.0.3
 Markdown==3.3.4
@@ -15,6 +17,7 @@ python-slugify==5.0.2
 PyYAML==6.0
 rdflib==6.0.2
 rdflib-jsonld==0.6.2
+requests==2.26.0
 six==1.16.0
 tenacity==8.0.1
 text-unidecode==1.3
