--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 certifi==2021.10.8
-charset-normalizer==2.0.11
+charset-normalizer==2.0.12
 click==8.0.3
 colorama==0.4.4
 idna==3.3
@@ -10,6 +10,7 @@ MarkupSafe==2.0.1
 mdx-breakless-lists==1.0.1
 minio==7.1.3
 pathvalidate==2.5.0
+pdfrw==0.4
 psycopg2==2.9.3
 pyparsing==3.0.7
 python-dateutil==2.8.2
