--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,14 +56,8 @@ jobs:
         docker image tag $PRIVATE_IMAGE:$GITHUB_SHA $PRIVATE_IMAGE:$GITHUB_BRANCH
         docker push $PRIVATE_IMAGE:$GITHUB_BRANCH
 
-    - name: Docker tag and push - develop (public)
-      if: github.event_name == 'push' && github.ref == 'refs/heads/develop' && env.PRIVATE_REGISTRY_URL != '' && env.DOCKER_HUB_USERNAME != ''
-      run: |
-        docker image tag $PRIVATE_IMAGE:$GITHUB_SHA $PUBLIC_IMAGE:$TAG_DEVELOP
-        docker push $PUBLIC_IMAGE:$TAG_DEVELOP
-
     - name: Docker tag and push - latest (public)
-      if: github.event_name == 'push' && github.ref == 'refs/heads/master' && env.PRIVATE_REGISTRY_URL != '' && env.DOCKER_HUB_USERNAME != ''
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main' && env.PRIVATE_REGISTRY_URL != '' && env.DOCKER_HUB_USERNAME != ''
       run: |
         docker image tag $PRIVATE_IMAGE:$GITHUB_SHA $PUBLIC_IMAGE:$TAG_LATEST
         docker push $PUBLIC_IMAGE:$TAG_LATEST
