--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,11 @@ jobs:
 # (1) -> Build Docker image
     - name: Docker build
       run: |
-        docker pull $PUBLIC_IMAGE:$TAG_DEVELOP
-        docker build --cache-from $PUBLIC_IMAGE:$TAG_DEVELOP -t ${PRIVATE_IMAGE#/}:$GITHUB_SHA .
+        docker build -t ${PRIVATE_IMAGE#/}:$GITHUB_SHA .
         
 # (2) -> Docker image tagging
     - name: Docker login (private)
-      if: github.event_name == 'push' && env.PRIVATE_REGISTRY_URL != ''
+      if: github.event_name == 'push' && env.PRIVATE_REGISTRY_URL != '' && github.actor != 'dependabot[bot]'
       run: |
         docker login -u "$PRIVATE_REGISTRY_USERNAME" -p "$PRIVATE_REGISTRY_PASSWORD" "$PRIVATE_REGISTRY_URL"
       env:
@@ -37,33 +36,28 @@ jobs:
         PRIVATE_REGISTRY_PASSWORD: ${{ secrets.PRIVATE_REGISTRY_PASSWORD }}
 
     - name: Docker login (public)
-      if: github.event_name == 'push' && env.DOCKER_HUB_USERNAME != ''
+      if: github.event_name == 'push' && env.DOCKER_HUB_USERNAME != '' && github.actor != 'dependabot[bot]'
       run: |
         docker login -u "$DOCKER_HUB_USERNAME" -p "$DOCKER_HUB_PASSWORD"
       env:
         DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
         DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-    - name: Docker push - commit SHA (private)
-      if: github.event_name == 'push' && !startsWith(github.ref, 'refs/tags/') && env.PRIVATE_REGISTRY_URL != ''
-      run: |
-        docker push $PRIVATE_IMAGE:$GITHUB_SHA
-
     - name: Docker tag and push - branch (private)
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/') && !contains(github.ref, 'release') && env.PRIVATE_REGISTRY_URL != ''
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/') && !contains(github.ref, 'release') && env.PRIVATE_REGISTRY_URL != '' && github.actor != 'dependabot[bot]'
       run: |
         GITHUB_BRANCH=`echo $GITHUB_REF | cut -d/ -f3- | sed 's#/#-#g'`
         docker image tag $PRIVATE_IMAGE:$GITHUB_SHA $PRIVATE_IMAGE:$GITHUB_BRANCH
         docker push $PRIVATE_IMAGE:$GITHUB_BRANCH
 
     - name: Docker tag and push - latest (public)
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main' && env.PRIVATE_REGISTRY_URL != '' && env.DOCKER_HUB_USERNAME != ''
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main' && env.PRIVATE_REGISTRY_URL != '' && env.DOCKER_HUB_USERNAME != '' && github.actor != 'dependabot[bot]'
       run: |
         docker image tag $PRIVATE_IMAGE:$GITHUB_SHA $PUBLIC_IMAGE:$TAG_LATEST
         docker push $PUBLIC_IMAGE:$TAG_LATEST
 
     - name: Docker tag and push - version tag (public)
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && env.PRIVATE_REGISTRY_URL != '' && env.DOCKER_HUB_USERNAME != ''
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && env.PRIVATE_REGISTRY_URL != '' && env.DOCKER_HUB_USERNAME != '' && github.actor != 'dependabot[bot]'
       run: |
         GITHUB_TAG=`echo $GITHUB_REF | cut -d/ -f3` 
         # Release vX.Y.Z
