--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
     - uses: actions/checkout@v3
 
 # (1) -> Build Docker image
+    - name: Update build info
+      run: |
+        ./scripts/build-info.sh
+
     - name: Docker build
       run: |
         docker build -t ${PRIVATE_IMAGE#/}:$GITHUB_SHA .
