--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-certifi==2022.5.18.1
+certifi==2022.6.15
 charset-normalizer==2.0.12
 click==8.1.3
 idna==3.3
@@ -18,6 +18,7 @@ PyYAML==6.0
 rdflib==6.1.1
 rdflib-jsonld==0.6.2
 requests==2.28.0
+sentry-sdk==1.5.12
 six==1.16.0
 tenacity==8.0.1
 text-unidecode==1.3
