--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2022.6.15
-charset-normalizer==2.0.12
+charset-normalizer==2.1.0
 click==8.1.3
+colorama==0.4.5
 idna==3.3
 isodate==0.6.1
 Jinja2==3.1.2
@@ -22,4 +23,4 @@ sentry-sdk==1.6.0
 six==1.16.0
 tenacity==8.0.1
 text-unidecode==1.3
-urllib3==1.26.9
+urllib3==1.26.10
